1-kubernetes/objects/2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: parksmap-pod
  labels:
    app: parksmap
spec:
  containers:
    - name: parksmap-container
      image: quay.io/openshiftroadshow/parksmap:1.3.0
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: '1'
          memory: 1000Mi
        requests:
          cpu: 10m
          memory: 64Mi
