1-kubernetes/objects/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parksmap-deployment
  template:
    metadata:
      labels:
        app: parksmap-deployment
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
