1-kubernetes/objects/7-config-map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-configs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parksmap-configs
  template:
    metadata:
      labels:
        app: parksmap-configs
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: configmap-files
              mountPath: /home/appuser/config
      volumes:
        - name: configmap-files
          configMap:
            name: app-configmap-files
