1-kubernetes/objects/8-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parksmap-pvc
  template:
    metadata:
      labels:
        app: parksmap-pvc
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp/data
            - name: pvc-data
              mountPath: /mnt/data
      volumes:
        - name: tmp-volume
          emptyDir: { }
        - name: pvc-data
          persistentVolumeClaim:
            claimName: pvc-app
