1-kubernetes/objects/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parksmap-service
  labels:
    app: parksmap-deployment
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: parksmap-deployment
